--- a/Nitroh.Mono/Nitroh.Mono.csproj
+++ b/Nitroh.Mono/Nitroh.Mono.csproj
@@ -43,6 +43,10 @@
     <Compile Include="..\SolutionItems\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="domain_internals_h.cs" />
+    <Compile Include="image_h.cs" />
+    <Compile Include="metadata_h.cs" />
+    <Compile Include="metadata_internals_h.cs" />
     <Compile Include="MonoAssembly.cs" />
     <Compile Include="MonoDomain.cs" />
     <Compile Include="MonoExecutable.cs" />
@@ -53,6 +57,9 @@
       <Project>{720273A6-A653-4EFD-963C-AB5A782F3925}</Project>
       <Name>Nitroh.Windows</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="class_internals_h.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
