--- a/Nitroh.Aayla.Hearthstone.Data/Nitroh.Aayla.Hearthstone.Data.csproj
+++ b/Nitroh.Aayla.Hearthstone.Data/Nitroh.Aayla.Hearthstone.Data.csproj
@@ -4,18 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{75D09E1A-89D4-49C5-BFCA-B6573B0DE180}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{96867CC0-A49A-4BFA-8865-91BDC933DB5B}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nitroh.Aayla.CollectionCsvScript</RootNamespace>
-    <AssemblyName>Nitroh.Aayla.CollectionCsvScript</AssemblyName>
+    <RootNamespace>Nitroh.Aayla.Hearthstone.Data</RootNamespace>
+    <AssemblyName>Nitroh.Aayla.Hearthstone.Data</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,30 +47,13 @@
     <Compile Include="..\SolutionItems\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="CollectionCard.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Card.cs" />
+    <Compile Include="CardRepository.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Nitroh.Aayla.Hearthstone.Data\Nitroh.Aayla.Hearthstone.Data.csproj">
-      <Project>{96867CC0-A49A-4BFA-8865-91BDC933DB5B}</Project>
-      <Name>Nitroh.Aayla.Hearthstone.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Nitroh.Mono.Hearthstone\Nitroh.Mono.Hearthstone.csproj">
-      <Project>{2cf890f5-4d81-4705-ae29-5f1d7faad4ba}</Project>
-      <Name>Nitroh.Mono.Hearthstone</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Nitroh.Mono\Nitroh.Mono.csproj">
-      <Project>{13e4cccc-cd04-4bb5-b6db-9726ecde53a9}</Project>
-      <Name>Nitroh.Mono</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Nitroh.Windows\Nitroh.Windows.csproj">
-      <Project>{720273a6-a653-4efd-963c-ab5a782f3925}</Project>
-      <Name>Nitroh.Windows</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
