--- a/Nitroh.Aayla.Hearthstone.Data/Nitroh.Aayla.Hearthstone.Data.csproj
+++ b/Nitroh.Aayla.Hearthstone.Data/Nitroh.Aayla.Hearthstone.Data.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nitroh.Aayla.Dtos\Nitroh.Aayla.Dtos.csproj">
+      <Project>{34004bd3-ca1c-4e5b-a176-2fe573000d70}</Project>
+      <Name>Nitroh.Aayla.Dtos</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
