--- a/Nitroh.Aayla/Nitroh.Aayla.csproj
+++ b/Nitroh.Aayla/Nitroh.Aayla.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Collection.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -99,6 +100,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Nitroh.Aayla.Dtos\Nitroh.Aayla.Dtos.csproj">
+      <Project>{34004bd3-ca1c-4e5b-a176-2fe573000d70}</Project>
+      <Name>Nitroh.Aayla.Dtos</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Nitroh.Aayla.Hearthstone.Data\Nitroh.Aayla.Hearthstone.Data.csproj">
+      <Project>{96867CC0-A49A-4BFA-8865-91BDC933DB5B}</Project>
+      <Name>Nitroh.Aayla.Hearthstone.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Nitroh.Mono.Hearthstone\Nitroh.Mono.Hearthstone.csproj">
       <Project>{2CF890F5-4D81-4705-AE29-5F1D7FAAD4BA}</Project>
       <Name>Nitroh.Mono.Hearthstone</Name>
